git-annex (3.20110622) unstable; urgency=low

  There has been another change to the git-annex data store.
  Use `git annex upgrade` to migrate your repositories to the new
  layout.

  The significant change this time is that the .git-annex/ directory
  is gone; instead there is a git-annex branch that is automatically
  maintained by git-annex, and encapsulates all its state nicely out
  of your way.

  You should make sure you include the git-annex branch when
  git pushing and pulling.

 -- Joey Hess <joeyh@debian.org>  Tue, 21 Jun 2011 20:18:00 -0400

git-annex (0.20110316) experimental; urgency=low

  This version reorganises the layout of git-annex's files in your repository.
  There is an upgrade process to convert a repository from the old git-annex
  to this version. See <http://git-annex.branchable.com/upgrades/> or
  /usr/share/doc/git-annex/html/upgrades.html

 -- Joey Hess <joeyh@debian.org>  Wed, 16 Mar 2011 15:49:15 -0400